// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has folding range support for handlebars language folding range for [.gts] files able to provide folding ranges  1`] = `
Object {
  "addonsMeta": Array [],
  "registry": Object {
    "component": Object {
      "hello": Array [
        "app/components/hello/index.gts",
      ],
    },
  },
  "response": Array [
    Object {
      "endCharacter": 31,
      "endLine": 11,
      "kind": "region",
      "startCharacter": 20,
      "startLine": 3,
    },
    Object {
      "endCharacter": 30,
      "endLine": 10,
      "kind": "region",
      "startCharacter": 24,
      "startLine": 4,
    },
    Object {
      "endCharacter": 35,
      "endLine": 9,
      "kind": "region",
      "startCharacter": 28,
      "startLine": 5,
    },
    Object {
      "endCharacter": 28,
      "endLine": 9,
      "kind": "region",
      "startCharacter": 36,
      "startLine": 7,
    },
  ],
}
`;

exports[`has folding range support for handlebars language folding range for [.hbs] files able to provide folding ranges  1`] = `
Object {
  "addonsMeta": Array [],
  "registry": Object {
    "component": Object {
      "hello": Array [
        "app/components/hello/index.hbs",
      ],
    },
  },
  "response": Array [
    Object {
      "endCharacter": 16,
      "endLine": 7,
      "kind": "region",
      "startCharacter": 10,
      "startLine": 1,
    },
    Object {
      "endCharacter": 19,
      "endLine": 6,
      "kind": "region",
      "startCharacter": 12,
      "startLine": 2,
    },
    Object {
      "endCharacter": 12,
      "endLine": 6,
      "kind": "region",
      "startCharacter": 20,
      "startLine": 4,
    },
  ],
}
`;

exports[`has folding range support for handlebars language folding range for [.ts] files able to provide folding ranges  1`] = `
Object {
  "addonsMeta": Array [],
  "registry": Object {
    "component": Object {
      "hello": Array [
        "app/components/hello/index.ts",
      ],
    },
  },
  "response": Array [
    Object {
      "endCharacter": 18,
      "endLine": 8,
      "kind": "region",
      "startCharacter": 28,
      "startLine": 2,
    },
    Object {
      "endCharacter": 21,
      "endLine": 7,
      "kind": "region",
      "startCharacter": 14,
      "startLine": 3,
    },
    Object {
      "endCharacter": 14,
      "endLine": 7,
      "kind": "region",
      "startCharacter": 22,
      "startLine": 5,
    },
  ],
}
`;
